# gaussian-sim

./: .gitignore  AGENTS.md  COMMON_MISTAKES.md  LOCAL_DEVELOPMENT.md  MACHINE_CONFIGURATION.md  alignment_lab.py  alignment_session.py  beam.py  conftest.py  interactive_setup.py  plotting.py  pyproject.toml  pytest.ini  run_alignment.py  setup_demo.py  system.py
Standard position images/: README.md
alignment lab/: __init__.py  alignment_lab.py  beam.py  elements.py  interactive_setup.py  layout.py
alignment_algorithms/: __init__.py  ball_lens_probe.py  base.py  blind_power_j.py  blind_power_j_newton.py  coordinate_scan.py  given_positions.py  manual.py  position_solve.py  walk_beam.py  yase.py
examples/: __init__.py  fiber_coupling_match.py  single_lens_focus.py  telescope_beam_expander.py
migration/: README.md  TMPython.ini
migrations/: README.md
testmaster_alignment/: alignment_step.py  contracts.py  movement_command_test_step.py
testmaster_python_alignment_algorithm/: README.md  SUBPROCESS_MAP.md  TESTMASTER_DOC_AUDIT.md  alignment_step.py  tmpython_compat.py
tests/: test_abcd.py  test_alignment_lab.py  test_beam.py  test_interactive_setup.py  test_layout.py  test_migration_v1_alignment_solving.py  test_migration_v2_staged_ball_placement.py  test_migration_v3_default_positioning.py  test_migration_v3_vision_recognition.py  test_migration_v4_default_positioning.py  test_migration_v5_vision_geometry.py  test_migration_v6_cleanroom_runtime_check.py  test_migration_v6_standard_workflow_simulator.py  test_migration_v6_yase_vision_workflow.py  test_plotting.py  test_testmaster_alignment.py  test_testmaster_python_alignment_algorithm.py  test_vision_recognition_lab.py  test_vision_scoring.py  (+2 more)
(+378 files in other folders)
